{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 9,
  "lineage": "e2a29ac7-0206-a8e6-0796-e88a7c8baae2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_Amazon_Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fd5f7cfe0604468",
            "arn": "arn:aws:ec2:eu-central-1:404405619113:instance/i-0f74ebbeb939cc4ad",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f74ebbeb939cc4ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4119169a49c6fab",
            "private_dns": "ip-10-0-1-238.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.238",
            "public_ip": "3.120.180.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062ac9f5c5a3e3bd5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0858ede8aadbc01bb",
            "tags": {
              "Name": "My Amazon Linux Server"
            },
            "tags_all": {
              "Name": "My Amazon Linux Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afea3a17caed32f5"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.latest_amazon_linux",
            "module.sg.aws_security_group.SecurityGroup_EC2inPublicSubnet",
            "module.subnet.aws_subnet.publicsubnet",
            "module.subnet.data.aws_availability_zones.availableAZ",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup_EC2inPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404405619113:security-group/sg-0afea3a17caed32f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afea3a17caed32f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for EC2 instances public subnets",
            "name_prefix": "",
            "owner_id": "404405619113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-publicsubnetEC2-SG"
            },
            "tags_all": {
              "Name": "dev-publicsubnetEC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0bc226c03d7f88e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404405619113:internet-gateway/igw-043437754543ab8c5",
            "id": "igw-043437754543ab8c5",
            "owner_id": "404405619113",
            "tags": {
              "Name": "dev-InternetGateway"
            },
            "tags_all": {
              "Name": "dev-InternetGateway"
            },
            "vpc_id": "vpc-0a0bc226c03d7f88e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404405619113:route-table/rtb-0e5d95dac98ed9fcc",
            "id": "rtb-0e5d95dac98ed9fcc",
            "owner_id": "404405619113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043437754543ab8c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-publicroutetable"
            },
            "tags_all": {
              "Name": "dev-publicroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0bc226c03d7f88e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_internet_gateway.internetgateway",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeTableAssociationPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04545b5ed91d89ee6",
            "route_table_id": "rtb-0e5d95dac98ed9fcc",
            "subnet_id": "subnet-0858ede8aadbc01bb"
          },
          "dependencies": [
            "module.subnet.aws_internet_gateway.internetgateway",
            "module.subnet.aws_route_table.publicroutetable",
            "module.subnet.aws_subnet.publicsubnet",
            "module.subnet.data.aws_availability_zones.availableAZ",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404405619113:subnet/subnet-0858ede8aadbc01bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0858ede8aadbc01bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404405619113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-central-1a",
              "Environment": "dev-publicsubnet",
              "Name": "dev-publicsubnet-1"
            },
            "tags_all": {
              "AZ": "eu-central-1a",
              "Environment": "dev-publicsubnet",
              "Name": "dev-publicsubnet-1"
            },
            "vpc_id": "vpc-0a0bc226c03d7f88e"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.availableAZ",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404405619113:vpc/vpc-0a0bc226c03d7f88e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0bd9b1bf30fede8",
            "default_route_table_id": "rtb-09cc80fa30765aceb",
            "default_security_group_id": "sg-0d7c619d7fe247931",
            "dhcp_options_id": "dopt-0da460e54b40907de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0bc226c03d7f88e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cc80fa30765aceb",
            "owner_id": "404405619113",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}